--- a/Local Sites/LocalTravel/assets/src/html/ui.html
+++ b/Local Sites/LocalTravel/assets/src/html/ui.html
@@ -32,21 +32,21 @@
                            
                         </div>
                         <div class="ui__group">
-                            <button class="btn btn-primary h-bg green">
+                            <button class="btn btn-icon btn-primary h-bg green">
                                 <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M18.75 7.5L11.25 15L18.75 22.5" stroke="white" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
                                 </svg>                                    
                             </button>
                         </div>
                         <div class="ui__group">
-                            <button class="btn btn-primary  h-bg h-border">
+                            <button class="btn btn-icon btn-primary  h-bg h-border">
                                 <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M5 15H25M5 7.5H25M5 22.5H25" stroke="#0E121A" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                                 </svg>                                       
                             </button>
                         </div>
                         <div class="ui__group">
-                            <button class="btn btn-primary h-bg h-border">
+                            <button class="btn btn-icon btn-primary h-bg h-border">
                                 <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M15 23.75L6.25 15M6.25 15L15 6.25M6.25 15H23.75" stroke="#111111" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                                 </svg>                                
